cargo-features = ["public-dependency"]

[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["api-bindings", "web-programming"]
description = "Types for the endpoints in the Matrix client-server API."
documentation = "https://docs.rs/ruma-client-api"
homepage = "https://github.com/ruma/ruma-client-api"
keywords = ["matrix", "chat", "messaging", "ruma"]
license = "MIT"
name = "ruma-client-api"
readme = "README.md"
repository = "https://github.com/ruma/ruma-client-api"
version = "0.3.0"
edition = "2018"

[dependencies]
js_int = { version = "0.1.2", features = ["serde"], public = true }
ruma-api = "0.10.0"
ruma-events = { git = "https://github.com/ruma/ruma-events", branch = "event-result-stub", public = true }
ruma-identifiers = { version = "0.14.0", public = true }
serde = { version = "1.0.98", features = ["derive"], public = true }
serde_json = { version = "1.0.40", public = true }
url = { version = "2.0.0", features = ["serde"], public = true }
